force-app/main/default/objects/MeetingReportTheme__c/MeetingReportTheme__c.object-meta.xml
<CustomObject>
    <description>An object designed as a junction to capture and store information regarding the themes discussed in a meeting report</description>
    <label>Meeting Report Theme</label>
    <nameField>
        <displayFormat>MRT-{0000000}</displayFormat>
        <label>Meeting Report Theme Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Report Themes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>