force-app/main/default/objects/MeetingReportTheme__c/fields/MeetingReportRef__c.field-meta.xml
<CustomField>
    <fullName>MeetingReportRef__c</fullName>
    <description>To what meeting report refers this theme junction?</description>
    <label>Meeting Report</label>
    <referenceTo>Gespreksverslag__c</referenceTo>
    <relationshipLabel>Meeting Report Themes</relationshipLabel>
    <relationshipName>Meeting_Report_Themes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>