force-app/main/default/objects/MeetingReportTheme__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <description>Note about this specific meeting report theme</description>
    <label>Note</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>