force-app/main/default/objects/MeetingReportTheme__c/fields/ThemeNameForm__c.field-meta.xml
<CustomField>
    <fullName>ThemeNameForm__c</fullName>
    <description>Displays the name of the selected theme.</description>
    <formula>ThemeRef__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Theme Name</label>
    <type>Text</type>
</CustomField>