force-app/main/default/objects/MeetingReportTheme__c/fields/ThemeRef__c.field-meta.xml
<CustomField>
    <fullName>ThemeRef__c</fullName>
    <description>What this is discussed. Fetched from the master data based object Theme.</description>
    <label>Theme</label>
    <referenceTo>Theme__c</referenceTo>
    <relationshipLabel>Meeting Report Themes</relationshipLabel>
    <relationshipName>Meeting_Report_Themes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>